# a365-governed-procode-agent-starter

./: .env.template  .gitignore  AGENT-CODE-WALKTHROUGH.md  README.md  TROUBLESHOOTING.md  ToolingManifest.json  agent.py  agent_interface.py  agent_msaf.py  docs.html  host_agent_server.py  index.html  learning-series.html  local_authentication_options.py  m365agents.playground.yml  m365agents.yml  pyproject.toml  start_with_generic_host.py  token_cache.py
.github/workflows/: ci.yml  pages.yml
assets/: jsconfig.json
assets/css/: site.css
assets/js/: docs-manifest.js  docs.js  learning-series.js  posts-manifest.js  site.js
blog/: Gemfile  README.md  _config.yml  about.md  index.md
blog/_posts/: 2026-04-15-what-is-agent-365.md  2026-04-16-architecture-and-design.md  2026-04-17-setup-walkthrough.md  2026-04-18-code-walkthrough.md  2026-04-19-security-blueprint-policy.md  2026-04-20-evidence-multi-instance-inheritance.md  2026-04-21-evidence-roundtrip.md
docs/: blueprint-policy.md  code-walkthrough.md  design.md  learning-guide.md  project-scope.md  quickstart.md  setup-walkthrough.md  testing.md  troubleshooting.md
docs/adr/: 0001-polyglot-test-strategy.md  0002-static-spa-no-build.md  0003-provisioning-via-script-not-azd.md  0004-build-time-manifests.md  0005-posts-hand-authored-not-generated.md  README.md
docs/evidence/: multi-instance-inheritance.md  round-trip.md
env/: .env.playground
posts/: architecture-and-design.md  code-walkthrough.md  evidence-multi-instance-inheritance.md  evidence-roundtrip.md  security-blueprint-policy.md  setup-walkthrough.md  what-is-agent-365.md
scripts/: README.md  assign-observability-role.ps1  build_manifests.py  inspect_observability.py  provision-second-instance.ps1  refresh-observability-token.ps1  setup-environment.Tests.ps1  setup-environment.ps1  smoke-test.Tests.ps1  smoke-test.ps1  teardown-environment.ps1
tests/: conftest.py  test_agent_interface.py  test_doc_links.py  test_docs_posts_parity.py  test_token_cache.py  test_tooling_manifest.py
website/: .gitignore  README.md  docusaurus.config.js  package.json  sidebars.js
website/blog/: 2026-04-15-what-is-agent-365.md  2026-04-16-architecture-and-design.md  2026-04-17-setup-walkthrough.md  2026-04-18-code-walkthrough.md  2026-04-19-security-blueprint-policy.md  2026-04-20-evidence-multi-instance-inheritance.md  2026-04-21-evidence-roundtrip.md  authors.yml
website/src/css/: custom.css
website/src/pages/: index.js  index.module.css
