[project]
name = "sample-openai-agent"
version = "0.1.0"
description = "A365 Governed Pro-Code Agent Starter — reference pro-code agent using Microsoft Agent 365 SDK, MCP tooling, and blueprint-based governance"
authors = [
    { name = "Microsoft", email = "support@microsoft.com" }
]
dependencies = [
    # OpenAI Agents SDK - The official package
    "openai-agents",

    # Microsoft Agents SDK - Official packages for hosting and integration
    "microsoft-agents-hosting-aiohttp",
    "microsoft-agents-hosting-core",
    "microsoft-agents-authentication-msal",
    "microsoft-agents-activity",

    # Core dependencies
    "python-dotenv",
    "aiohttp",

    # HTTP server support for MCP servers
    "uvicorn[standard]>=0.20.0",
    "fastapi>=0.100.0",

    # HTTP client
    "httpx>=0.24.0",

    # Data validation
    "pydantic>=2.0.0",

    # Additional utilities
    "typing-extensions>=4.0.0",

    # Microsoft Agent 365 SDK packages
    "microsoft_agents_a365_tooling >= 0.1.0",
    "microsoft_agents_a365_tooling_extensions_openai >= 0.1.0",
    "microsoft_agents_a365_observability_core >= 0.1.0",
    "microsoft_agents_a365_observability_extensions_openai >= 0.1.0",
    "microsoft_agents_a365_notifications >= 0.1.0",
]
requires-python = ">=3.11"

# Package index configuration
# PyPI is the default/primary source for the GA Agent 365 SDK packages.
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

# Pin Microsoft Agent 365 SDK packages to PyPI. Since the GA release
# (May 1, 2026) the SDK ships stable versions on PyPI; no prerelease
# allowance is required.
[tool.uv.sources]
microsoft_agents_a365_tooling = { index = "pypi" }
microsoft_agents_a365_tooling_extensions_openai = { index = "pypi" }
microsoft_agents_a365_observability_core = { index = "pypi" }
microsoft_agents_a365_observability_extensions_openai = { index = "pypi" }
microsoft_agents_a365_notifications = { index = "pypi" }
microsoft_agents_a365_runtime = { index = "pypi" }

[project.optional-dependencies]
dev = [
    # For development and testing
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.setuptools]
# Don't include any Python modules in the package since this is a sample/script collection
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["build*", "dist*", "venv*"]
